--- a/src/app/pages/task-view/task-view.component.html
+++ b/src/app/pages/task-view/task-view.component.html
@@ -7,18 +7,12 @@
       </h1>
 
       <div class="list-menu">
-        <a class="list-menu-item is-active">
-          <p>List 1</p>
-        </a>
-        <a class="list-menu-item">
-          <p>List 1</p>
-        </a>
-        <a class="list-menu-item">
-          <p>List 1</p>
+        <a class="list-menu-item" *ngFor="let list of lists" [routerLink]="['/lists', list._id]" routerLinkActive="is-active">
+          <p>{{list.title}}</p>
         </a>
       </div>
 
-      <button class="button is-primary has-text-white">+ New List</button>
+      <button class="button is-primary has-text-white" routerLink="/new-list">+ New List</button>
 
     </div>
 
@@ -28,15 +22,13 @@
       </h1>
 
       <!--Task ELEMENTS..-->
-      <div class="task">
-        <p>This is something I have to do</p>
+      <div class="task" *ngFor="let task of tasks" (click)="onTaskClick(task)" [ngClass]="{'completed': task.completed}">
+        <p>{{task.title}}</p>
       </div>
-      <div class="task">
-        <p>This is something I have to do</p>
-      </div>
-      <div class="task complate">
-        <p>This is something I have to do</p>
-      </div>
+
+      <button class="circle-add-button button is-primary" routerLink="./new-task">
+        <img src="assets/iconmonstr-plus-2.svg">
+      </button>
 
     </div>
   </div>
