--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,14 +4,7 @@
 @import '../node_modules/bulma/bulma.sass';
 
 
-// Task View Style SCSS
-.centered-content {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-}
+// Task View Style SCSS ------------------------------------>
 
 .task-manager-container {
   display: flex;
@@ -97,8 +90,18 @@
     }
   }
 
-  &.complate {
+  &.completed {
     text-decoration: line-through;
     opacity: 0.8;
   }
 }
+
+.circle-add-button{
+  position: absolute;
+  bottom: 35px;
+  right: 35px;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+}
+
